[package]
name = "dep-graph"
version = "0.1.0"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nmoutschen/dep-graph"
description = "Dependency graph resolver library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "resolver"
harness = false

[dependencies]
crossbeam-channel = "0.4"
num_cpus = "1.13"
tracing = "0.1"
tracing-subscriber = "0.2"