[package]
name = "dep-graph"
version = "0.1.5"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nmoutschen/dep-graph"
description = "Dependency graph resolver library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "depgraph"
harness = false

[dependencies]
crossbeam-channel = "0.4"
rayon = { version = "1.3", optional = true }
num_cpus = "1.13"